--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@angular/platform-browser": "^20.1.0",
     "@angular/router": "^20.1.0",
     "rxjs": "~7.8.0",
+    "tailwind-scrollbar": "^1.3.1",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
