--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/forms": "^20.1.0",
     "@angular/platform-browser": "^20.1.0",
     "@angular/router": "^20.1.0",
+    "markdown-it": "^14.1.0",
     "ngx-markdown": "^20.0.0",
     "rxjs": "~7.8.0",
     "tailwind-scrollbar": "^1.3.1",
