--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,9 @@
     "target": "ES2022",
     "module": "es2022",
     "moduleResolution": "node",
-    "typeRoots": ["node_modules/@types"]
+    "typeRoots": ["node_modules/@types"],
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
