--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@angular/build": "^20.1.5",
     "@angular/cli": "^20.1.5",
     "@angular/compiler-cli": "^20.1.0",
+    "@compodoc/compodoc": "^1.1.30",
     "@types/jasmine": "~5.1.0",
     "@types/markdown-it": "^14.1.2",
     "autoprefixer": "^10.4.21",
