--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@angular/cli": "^20.3.3",
     "@angular/compiler-cli": "^20.3.2",
     "@compodoc/compodoc": "^1.1.30",
+    "@tailwindcss/typography": "^0.5.19",
     "@types/jasmine": "~5.1.0",
     "@types/markdown-it": "^14.1.2",
     "autoprefixer": "^10.4.21",
