--- a/angular.json
+++ b/angular.json
@@ -22,8 +22,8 @@
               }
             ],
             "styles": [
-              "node_modules/katex/dist/katex.min.css",
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/katex/dist/katex.min.css"
             ]
           },
           "configurations": {
