--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
     "@angular/forms": "^20.3.2",
     "@angular/platform-browser": "^20.3.2",
     "@angular/router": "^20.3.2",
+    "@traptitech/markdown-it-katex": "^3.6.0",
     "katex": "^0.16.22",
     "markdown-it": "^14.1.0",
-    "markdown-it-katex": "^2.0.3",
     "ngx-markdown": "^20.0.0",
     "rxjs": "~7.8.0",
     "tailwind-scrollbar": "^1.3.1",
