--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "markdown-it": "^14.1.0",
     "ngx-markdown": "^20.0.0",
     "rxjs": "~7.8.0",
+    "socket.io-client": "^4.8.1",
     "tailwind-scrollbar": "^1.3.1",
     "tslib": "^2.3.0"
   },
