--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "katex": "^0.16.22",
     "markdown-it": "^14.1.0",
     "ngx-markdown": "^20.0.0",
+    "plotly.js-dist-min": "^3.3.1",
     "rxjs": "~7.8.0",
     "socket.io-client": "^4.8.1",
     "tailwind-scrollbar": "^1.3.1",
@@ -45,6 +46,7 @@
     "@tailwindcss/typography": "^0.5.19",
     "@types/jasmine": "~5.1.0",
     "@types/markdown-it": "^14.1.2",
+    "@types/plotly.js-dist-min": "^2.3.4",
     "autoprefixer": "^10.4.23",
     "jasmine-core": "~5.8.0",
     "karma": "~6.4.0",
