--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "katex": "^0.16.22",
     "markdown-it": "^14.1.0",
     "ngx-markdown": "^20.0.0",
+    "ngx-monaco-editor-v2": "^20.3.0",
     "plotly.js-dist-min": "^3.3.1",
     "rxjs": "~7.8.0",
     "socket.io-client": "^4.8.1",
